@startuml
interface Tokenize{
    + List<String> sto()
    + String print(): String
}
class ChuoiDauTien{
    # String chuoi
    + Chuoi(String chuoi)
    +{abstract} String print(): String
    +{abstract} List<String> sto()
}

abstract class TokenizeDecorator{
    # Tokenize tokenize
    + TokenizeDecorator(Tokenize tokenize)
    + List<String> sto() : List<String>
    + String print(): String
}

class TachTu{
    # List<String> chuoiluu
    + TachTu(Tokenize tokenize, List<String> chuoiluu)
    + List<String> FuncTachTu(String chuoi)
    +{abstract} String print(): String
    +{abstract} List<String> sto()
}
class LoaiBoTuDung{
    # List<String> chuoiluu
    + TachTu(Tokenize tokenize, List<String> chuoiluu)
    + List<String> FuncLoaiBoTuDung(String chuoi)
    +{abstract} String print(): String
    +{abstract} List<String> sto()
}
class LoaiBoDauCau{
    # List<String> chuoiluu
    + TachTu(Tokenize tokenize, List<String> chuoiluu)
    + List<String> FuncLoaiBoDauCau(String chuoi)
    +{abstract} String print(): String
    +{abstract} List<String> sto()
}

Tokenize <|.. ChuoiDauTien
Tokenize <|.. TokenizeDecorator
Tokenize <-- TokenizeDecorator : tokenize
TokenizeDecorator <|-- TachTu
TokenizeDecorator <|-- LoaiBoDauCau
TokenizeDecorator <|-- LoaiBoTuDung
@enduml